<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login"
        android:hint="@string/hint_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standart_margin"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standart_margin"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_download_title"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_title"
        style="@style/ButtonStyle" />
    </LinearLayout>

</LinearLayout>