<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_title"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back_title"
            style="@style/ButtonStyle" />
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:id="@+id/tv_no_data"
        android:text="@string/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Header"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        style="@style/Header"
        android:layout_marginLeft="@dimen/standart_margin_table"
        android:layout_marginRight="@dimen/standart_margin_table"/>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/standart_margin_table"
        android:layout_marginRight="@dimen/standart_margin_table">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
        </android.support.v7.widget.RecyclerView>
    </ScrollView>
</LinearLayout>